--- a/style.css
+++ b/style.css
@@ -4,22 +4,24 @@ body {
   color: #333;
   font-family: Lato, sans-serif;
 }
-.picture {
+header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.picture img {
+header img {
   width: 100%;
 }
-.picture .more-inf {
+header {
   font-family: fantasy, cursive;
 }
-
+.more-inf{
+  font-family: fantasy, cursive;
+}
 @media (max-width:768px) {
 
-  .picture { 
+  .header { 
     text-align: center;
   }
 
